update docker files to build off each other to have easier maintainability

--- a/docker/Dockerfile.churchcrm-apache-php8-dev-debian
+++ b/docker/Dockerfile.churchcrm-apache-php8-dev-debian
@@ -1,41 +1,23 @@
+# syntax = devthefuture/dockerfile-x
 FROM  php:8-apache
 
-ADD https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh /opt/node-install.sh
-RUN chmod a+x /opt/node-install.sh && /opt/node-install.sh
-
-RUN /bin/bash -c "source /root/.nvm/nvm.sh && nvm install --lts && npm install -g node-gyp"
+INCLUDE Dockerfile.churchcrm-apache-php8-test-debian
 
 RUN apt-get update && \
     apt-get install -y \
-        libxml2-dev \
-        gettext \
-        libpng-dev \
-        libzip-dev \
-        libfreetype6-dev \
-        libmcrypt-dev \
-        libpng-dev \
-        libjpeg-dev \
-        libpng-dev \
         make \
         git \
-        python3
+        python3 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install -j$(nproc) xml exif pdo_mysql gettext iconv mysqli zip
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
+    php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
+    rm composer-setup.php
 
-RUN    docker-php-ext-install -j$(nproc) gd
+RUN curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh -o /opt/node-install.sh && \
+    chmod a+x /opt/node-install.sh && \
+    /opt/node-install.sh && \
+    rm /opt/node-install.sh
 
-COPY ./apache/default.conf /etc/apache2/apache2.conf
-
-RUN a2enmod  rewrite
-
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-
-# Configure PHP
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
-
-RUN sed -i 's/^upload_max_filesize.*$/upload_max_filesize = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^post_max_size.*$/post_max_size = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^memory_limit.*$/memory_limit = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^max_execution_time.*$/max_execution_time = 120/g' $PHP_INI_DIR/php.ini
+RUN /bin/bash -c "source /root/.nvm/nvm.sh && nvm install --lts && npm install -g node-gyp"
