--- a/package.json
+++ b/package.json
@@ -40,16 +40,14 @@
         "datadictionary": "php src/vendor/propel/propel/bin/propel.php --config-dir=propel datadictionary:generate",
         "composer-install": "cd src/ && composer install && cd .. && grunt lineending",
         "composer-update": " cd src/ && composer update && grunt lineending",
-        "docker-dev-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.dev-php8-apache.yaml up -d",
-        "docker-dev-build": "docker-compose -f docker/docker-compose.dev-php8-apache.yaml build",
+        "docker-dev-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.dev-php8-apache.yaml up -d --build",
         "docker-dev-login-web": "docker-compose -f docker/docker-compose.dev-php8-apache.yaml exec webserver bash",
         "docker-dev-login-db": "docker-compose -f docker/docker-compose.dev-php8-apache.yaml exec database bash",
         "docker-dev-logs": "docker-compose -f docker/docker-compose.dev-php8-apache.yaml logs -f --tail=10",
         "docker-dev-stop": "docker-compose -f docker/docker-compose.dev-php8-apache.yaml stop",
-        "docker-test-build": "docker-compose -f docker/docker-compose.test-php8-apache.yaml build",
-        "ci-docker-test-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.test-php8-apache.yaml -f docker/docker-compose.test-php8-apache.gh-actions.yaml up -d",
+        "ci-docker-test-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.test-php8-apache.yaml -f docker/docker-compose.test-php8-apache.gh-actions.yaml up -d --build",
         "ci-docker-test-down": "docker-compose -f docker/docker-compose.test-php8-apache.yaml -f docker/docker-compose.test-php8-apache.gh-actions.yaml down -v",
-        "docker-test-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.test-php8-apache.yaml up -d",
+        "docker-test-start": "cp docker/Config.php src/Include/Config.php && docker-compose -f docker/docker-compose.test-php8-apache.yaml up -d --build",
         "docker-test-down": "docker-compose -f docker/docker-compose.test-php8-apache.yaml down -v",
         "docker-test-stop": "docker-compose -f docker/docker-compose.test-php8-apache.yaml stop",
         "docker-test-restart": "npm run docker-test-down && npm run docker-test-start",
