--- a/docker/Dockerfile.churchcrm-apache-php8-test-debian
+++ b/docker/Dockerfile.churchcrm-apache-php8-test-debian
@@ -11,25 +11,27 @@ RUN apt-get update && \
         libzip-dev \
         libfreetype6-dev \
         libmcrypt-dev \
-        libpng-dev \
-        libjpeg-dev \
-        libpng-dev \
-        npm \
-        git
+        libjpeg-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install -j$(nproc) xml exif pdo_mysql gettext iconv mysqli zip
+RUN docker-php-ext-install -j$(nproc) \
+    xml \
+    exif \
+    pdo_mysql \
+    gettext \
+    iconv \
+    mysqli \
+    zip \
+    gd
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 
-RUN    docker-php-ext-install -j$(nproc) gd
+# Configure PHP
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini" && \
+    sed -i 's/^upload_max_filesize.*$/upload_max_filesize = 2G/g' $PHP_INI_DIR/php.ini && \
+    sed -i 's/^post_max_size.*$/post_max_size = 2G/g' $PHP_INI_DIR/php.ini && \
+    sed -i 's/^memory_limit.*$/memory_limit = 2G/g' $PHP_INI_DIR/php.ini && \
+    sed -i 's/^max_execution_time.*$/max_execution_time = 120/g' $PHP_INI_DIR/php.ini
 
 COPY ./apache/default.conf /etc/apache2/apache2.conf
-
-RUN a2enmod  rewrite
-
-# Configure PHP
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
-
-RUN sed -i 's/^upload_max_filesize.*$/upload_max_filesize = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^post_max_size.*$/post_max_size = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^memory_limit.*$/memory_limit = 2G/g' $PHP_INI_DIR/php.ini
-RUN sed -i 's/^max_execution_time.*$/max_execution_time = 120/g' $PHP_INI_DIR/php.ini
+RUN a2enmod rewrite
